[package]
name = "corner-detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
show-image = { version = "0.14.0", features=["image"] }
ndarray = "0.15.6"
ndarray-conv = "0.3.3"
nshare = { version = "0.9.0", featuers=["image", "ndarray"]}
ndarray-ndimage = "0.4"
ndarray-stats = "0.5.1"
rayon = "1.10.0"
